--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="headers.css"/>
     <title>Document</title>
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
-    <h1>My App with Styles</h1>
+    <h1>My App with Nav Styles</h1>
 </body>
 </html>
